# Python_Lib

./: .gitignore  Git_pull_on_all_submodules.py  My_Lib.py  My_Lib_Chemistry.py  My_Lib_Constants.py  My_Lib_File.py  My_Lib_MachineLearning.py  My_Lib_MachineLearning_Loss_Functions.py  My_Lib_MachineLearning_Models_Public.py  My_Lib_MachineLearning_Utilities.py  My_Lib_Network.py  My_Lib_Office.py  My_Lib_Plot.py  My_Lib_PyQt.py  My_Lib_PyQt6.py  My_Lib_Science.py  My_Lib_Stock.py  My_Lib_System.py  My_Lib_Video.py  New_Project_Procedures.txt  README.md  __init__.py  pyproject.toml
Tools/: Check_CAS_Numbers.py  Copy_Path_Tool.py  Copy_Path_Tool_Setup.py  Files_to_Indivitual_Folder.py  Generate_File_Hashes.py  Rename_Files_Title_Case.py
Unit_Test/: Filename_functions_test_cases.xlsx  test_filename_functions.py
mogli/: mogli.py
src/Chem_Lib/: Lib.py  Lib_CP2K.py  Lib_Chemistry.py  Lib_Constants.py  Lib_Coordinates.py  Lib_FileConversion.py  Lib_Filetype.py  Lib_GUI.py  Lib_Gaussian.py  Lib_MOPAC.py  Lib_Multiwfn.py  Lib_ORCA.py  Lib_Server.py  Lib_Utilities.py  Lib_XYZ.py  Lib_xTB.py  RMSD_by_cartesian.py  RMSD_by_dihedral.py  Thermo.py  Thermo_Correction_Factors.py  Z_Mat_to_Cartesian_Conversion.py
src/Chem_Lib/mogli/: mogli.py
src/LLM_Lib/: Indexing.py  LLM.py  LangGraph.py  __init__.py
src/LLM_Lib/Skills/: Compress_Markdown.py  Content_Based_Literature_Categorization.py  Rename_Ref.py
src/Machine_Learning_Lib/: Loss_Functions.py  Machine_Learning.py  Models_Public.py  Utilities.py
src/Python_Lib/: My_Lib.py  My_Lib_Color.py  My_Lib_File.py  My_Lib_HPC.py  My_Lib_Image.py  My_Lib_Network.py  My_Lib_Plot.py  My_Lib_Plot_Editor.py  My_Lib_Plot_JSON.py  My_Lib_PyQt6.py  My_Lib_Science.py  My_Lib_Stock.py  My_Lib_System.py
tests/: test_filename_functions.py
